--- a/instructions.yaml
+++ b/instructions.yaml
@@ -20,21 +20,21 @@ instructions:
   - name: MOV
     ops:
       - REG
-      - IMM
+      - IMM16
     desc: Load 16-bit immediate into REG
 
   - name: MOV
     ops:
-      - IMM
+      - IMM24
     desc: Load 24-bit immediate into ACC
 
   - name: ADD
     ops:
-      - IMM
+      - IMM24
     flags:
       - O
       - C
-    desc: Add immediate to ACC. Set O on overflow and C if result is 0.
+    desc: Add 24-bit immediate to ACC. Set O on overflow and C if result is 0.
 
   - name: ADD
     ops:
@@ -46,8 +46,8 @@ instructions:
 
   - name: ASR
     ops:
-      - IMM
-    desc: Arithmetic shift right by IMM
+      - IMM24
+    desc: Arithmetic shift right by IMM24
 
   - name: ASR
     ops:
@@ -56,7 +56,7 @@ instructions:
 
   - name: LSR
     ops:
-      - IMM
+      - IMM24
     desc: Logical shift right by IMM
 
   - name: LSR
@@ -66,7 +66,7 @@ instructions:
 
   - name: LSL
     ops:
-      - IMM
+      - IMM24
     desc: Logical shift left by IMM
 
   - name: LSL
